# Agent-Framework

./: .env.example  .gitignore  Claude.md  Madison_EMS_Schedules.xlsx  PR_REVIEW.md  README.md  alembic.ini  docker-compose.yml  main.py  pulse_dev.db-shm  pulse_dev.db-wal  pyproject.toml
.claude/commands/: extract-ems-schedule.md
.github/workflows/: ci.yml
admin/: index.html  package-lock.json  package.json  vite.config.js
admin/src/: App.jsx  index.css  statusUtils.js
admin/src/__tests__/: statusUtils.test.js
admin/src/components/: AgentDetail.jsx  AgentRow.jsx  HealthBadge.jsx  LogViewer.jsx  PlaneOverview.jsx  StatusDot.jsx
admin/src/hooks/: useAgentLogs.js  usePlaneStatus.js
agents/example/config/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
agents/president-dave/config/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md
agents/schema/: CHANGELOG.md  agent-config.schema.json
alembic/: env.py
alembic/versions/: 001_add_compliance_calendar.py
api/v1/: ai_routes.py  capture.py
backend/: requirements.txt
backend/app/: main.py
backend/app/middleware/: auth.py
backend/app/models/: admin.py
backend/app/services/: agent_service.py
config/: ai-routing.yaml
docker/: Dockerfile  Dockerfile.pulse  entrypoint.sh  load_config.py
docs/: PROJECT_REVIEW.md  gcp-migration-path.md  pr-review-open-prs-1-10.md  runbook.md  ssl-setup.md
docs/adr/: 001-docker-over-gcp-vms.md  002-ollama-primary-claude-fallback.md  003-agents-plane-pattern.md
integrations/ai/: __init__.py  router.py
integrations/n8n/: README.md  credentials-template.json
integrations/pulse/: .env.example  alembic.ini  app.py  requirements.txt
nginx/sites-available/: aios-pulse
onboarding/: index.html  package-lock.json  package.json
onboarding/src/: App.jsx  index.css  main.jsx
prompts/: PHASE-INDEX.md  README.md
provisioning/cli/: __init__.py  agents.py  ai.py  audit.py  backup.py  config_loader.py  docker_client.py  docker_status.py  main.py  output.py  planes.py  registry.py  types.py
scripts/: backup.sh  generate-self-signed-cert.sh  healthcheck.sh  restore.sh
tools/ems-schedule-extract/: Dockerfile  README.md  assemble.py  docker-entrypoint.sh  preprocess.py  setup.sh  to_excel.py  transcription_guide.md  watch_rfi.sh
(+101 files in other folders)
