[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aios"
version = "0.1.0"
description = "AIOS/Pulse — Agent Infrastructure & Orchestration System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "click>=8.1",
    "anthropic>=0.40",
    # Phase 9a — President officer modules
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "holidays>=0.46",
    "PyJWT[crypto]>=2.8",
]

[project.scripts]
aios = "provisioning.cli.main:cli"

[tool.setuptools.packages.find]
include = [
    "api*",
    "integrations*",
    "provisioning*",
]
